# hm-fashion-recommender

./: .gitattributes  .gitignore  README.md  pyproject.toml  python_eda_cheatsheet.txt  recommendation_system_notes.txt  requirements.txt
data/processed/: final_lstm_data.pth  transactions_train_filtered.csv
notebooks/: 01_preparation_eda.ipynb  collaborative_filtering_model.ipynb
notebooks/LSTM/: data_preparing.ipynb  data_split.ipynb  model.ipynb  tests.ipynb
notebooks/collaborative_filtering/: collaborative_filtering_model.ipynb
scripts/: evaluation.ipynb  lstm_model_final.pth  model.py  test.py  train.py  utils.py
scripts/data/processed/: final_lstm_data.pth
